--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -52,4 +52,18 @@
         android:textAllCaps="true"
         android:textSize="12sp" />
 
+    <Button
+        android:id="@+id/contactButton"
+        android:layout_width="107dp"
+        android:layout_height="72dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="100dp"
+        android:layout_marginBottom="-1dp"
+        android:onClick="contactClick"
+        android:text="contact"
+        android:textAllCaps="true"
+        android:textSize="12sp"
+        tools:ignore="DuplicateIds" />
+
 </RelativeLayout>
